<resources>


    //loginactivity
    <string name="phonenum">Phone Number</string>
    <string name="pass">Password</string>
    <string name="app_name">Cashiery</string>
    <string name="enterbar">Enter Barcode Or Name </string>
    <string name="alertpay">please wait for the Merchant Terminal for verifying the Cart items</string>
    <string name="login">Sign In</string>
    <string name="pay">Pay</string>
    <string name="camerausage">Please put Barcode in rectangle to scan it </string>
    <string name="cancelcamera">Cancel</string>
    <string name="done">Done</string>
    <string name="scananother">Scan Another</string>
    <string name="productaddedtocart">Product added to cart</string>
    <string name="transfer">Transfer</string>
    <string name="epbarcode">Enter Product Barcode</string>
    <string name="ok"> OK</string>
    <string name="hintemail">Enter Phone number </string>
    <string name="hintpass">Password </string>
    <string name="logout">Logout</string>
    <string name="quedeleteitem">Delete item ?</string>
    <string name="ansdeleteitem">Yes Delete</string>
    <string name="paymentver">Payment Verification</string>
    <string name="defayltproductname">Product</string>
    <string name="submit">Submit</string>
    <string name="chooseitemnu">Choose Items Numbers</string>
    <string name="empty_email"> phone Number</string>
    <string name="empty_pass"> Password</string>
    <string name="items">Items</string>
    <string name="ordercustomer">Order Customer</string>
    <string name="orderamount">Order Amount $</string>
    <string name="totalsales">Total sales :</string>
    <string name="removehistory">Remove History</string>
    <string name="ordermenu">List of Orders</string>
    <string name="payconfirmation">Do you want to delete them from inventory ?</string>
    <string name="titlepayconf">Confirm deletion</string>
    <string name="showdetails">Show Details</string>
    <string name="hidedetails">Hide Details</string>
    <string name="menusales">Sales List</string>
    <string name="barcodreader">Barcode Reader</string>
    <string name="knowapp">About App</string>
    <string name="aboutus">About Us </string>
    <string name="mycashier"> Cashier </string>
    <string name="unitprice">Unit Price</string>
    <string name="notrecorded">Not recorded in data base</string>
    <string name="newwretailer">New Subscription</string>
    <string name="forgetpass">Forgot Password ?</string>
    <string name="wewiilsend">We Will send you a verification code in a text message.</string>

    <string name="enterstorenum">Enter Store ID</string>
    <string name="entername">Admin Name</string>
    <string name="enteremail"> Phone Number</string>
    <string name="retypepass">Confirm Password</string>
    <string name="entermoile"> Mobile Number</string>
    <string name="level">Choose Level</string>
    <string name="signup">Sign Up</string>
    <string name="phonenumber">Phone Number</string>
    <string name="phoneexample">1122330867</string>
    <string name="next">Next</string>
    <string name="currency">Choose Currency</string>
    <string name="opentime">Open Time</string>
    <string name="CloseTime">Close Time</string>
    <string name="opendelivery">Open Delivery</string>
    <string name="closedelivery">Close Delivery</string>
    <string name="deliverytime">Delivery Time</string>
    <string name="storedescription">Description</string>
    <string name="address">Address</string>
    <string name="Active">Active</string>
    <string name="location">Location</string>
    <string name="delcharge">Del Charge</string>
    <string name="image">Image</string>
    <string name="salesview">Sales View</string>
    <string name="logotext">Cashiery .. More Sales</string>
    <string name="nameappwithimg">ashiery</string>
    <string name="accountdata">Account Data</string>
    <string name="savechanges">Save Changes</string>
    <string name="eshtrk">subscribe</string>
    <string name="replacement">Change</string>
    <string name="newpass">New Password</string>
    <string name="pharm">Pharmacy</string>
    <string name="market">Market</string>
    <string name="connectionfailed">Connection Failed</string>
    <string name="downloadproduct">Please Wait For Products Preparing...</string>
    <string name="insertofflinesales">Register a sale</string>
    <string name="pharmaddress">Pharmacy Address</string>
    <string name="adjustprice">Adjust Price</string>
    <string name="update">Update</string>

    <string name="newseller">New Seller</string>
    <string name="newmarket">New Market</string>
    <string name="newpharn">New Pharmacy</string>
    <string name="code">Code : </string>
    <string name="addproduct">Add Product</string>
    <string name="addit">Add </string>
    <string name="addprice">Add Price</string>
    <string name="addname">Add Name</string>
    <string name="chhosepic">Choose Picture</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="product">Product</string>
    <string name="barcode">Barcode</string>
    <string name="removesales">The sales record will be deleted</string>
    <string name="confirm">Confirm</string>
    <string name="updatesuc">Update Successfully</string>
    <string name="updatefailed">Update Failed</string>
    <string name="syncecompleted">Data synchronization completed</string>
    <string name="syncestart">Data Synchronization Started</string>
    <string name="listempty">List Is Empty</string>
    <string name="waitplz">Wait Please</string>
    <string name="downloadimges">Download Products Images...</string>
    <string name="downloadcomplet">Download Completed</string>
    <string name="baseurlimgproduct">https://eg.ojo.company/storage/product/</string>
    <string name="baseurlimgstore">https://eg.ojo.company/storage/store/</string>
    <string name="jpg">jpg</string>
    <string name="storenameusedbefore">Store Name Used Before</string>


    //validation
    //AIzaSyAK2B6GG54HNY0JCa9H2G35vMG5YWh0kjs
    //werpx AIzaSyA9bp-vXIeM2m5urcWsuaQ0gXL9_035TBw
    <string name="storeidV">Store Code</string>
    <string name="codepharm">Pharmacy Code</string>
    <string name="namV">Admin Name </string>
    <string name="allcategories">All Categories</string>
    <string name="emailV">Enter Phone Number</string>
    <string name="vaildemailV">Please Enter valid Email</string>
    <string name="minumV">Minimum Length of password should be 6</string>
    <string name="passV">Enter Password  </string>
    <string name="passRV">Password Not Match</string>
    <string name="mobileV">Enter Phone Number</string>
    <string name="phoneV">Enter Phone Number</string>
    <string name="delchargeV">Enter Delete Charge</string>
    <string name="currencyV">Choose Currency </string>
    <string name="opentV">Choose Open Time </string>
    <string name="closetV">Choose Close Time</string>
    <string name="opendV">Choose Open Delivery Time  </string>
    <string name="closedV">Choose Close Delivery Time </string>
    <string name="detimeV">Choose Delivery Time </string>
    <string name="distuboterV">Choose Distributor </string>
    <string name="subdistV">Choose Sub Distributor</string>
    <string name="addressV">Enter Address</string>
    <string name="imgV">Please PutImage For Store</string>
    <string name="storenam">Store Name</string>
    <string name="subscripe">Subscription</string>
    <string name="addphoto">Add Photo</string>
    <string name="dublicatenum">This Number Is Used before</string>
    <string name="salescreen">Sales Screen</string>
    <string name="points">Score credits</string>
    <string name="welcomtxt">Welcome  </string>
    <string name="setting">Settings</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="chagelanguage">Change Language</string>
    <string name="addedtocart">Added To Cart</string>
    <string name="succefulpayment">Successful Payment</string>
    <string name="failedpayment">Failed Payment</string>
    <string name="failedscynce">Failed Synchronization</string>
    <string name="fetchproducts">Fetching Product Data Completed</string>
    <string name="fetchingstart">Fetching Product Data Started</string>
    <string name="pharmname">Pharmacy Name</string>
    <string name="succefulregister">Successful Register</string>
    <string name="succesfullogin">Successful Login</string>
    <string name="takephoto">Take Photo </string>
    <string name="choosecategory">Choose Category </string>

    <string name="aboutusdes">Cashiery Application Use it for sales in your store or pharmacy
Earn cashback, many valuable gifts and many profitable offers
Kashiri applied more sales and more profits.\n \n

With Cashiery collecting points from each sale\n
And benefit from these points monthly.\n
- Points exchange in cashBack.\n
- You can exchange points for free goods.\n
- You can enter drag to get gifts very valuable.\n\n

With the Cashiery application, you can take advantage of many possibilities for free.\n
- Review the prices of distributors moment by moment.\n
- Check out the latest special offers to increase sales.\n
- Learn about special discounts for more profits.\n
- Your requests will also reach the supplier without any effort from you.\n
- And also will not reduce the products from the shelf anymore.\n
- And you will not increase your products too much.\n
- Cashiery continues directly and continuously with producers.\n
- Cashmere allows you to easily sell and buy.\n
- Cashiery acts as a special account program.\n\n

And soon to sell through the Delfry without any additional effort</string>


    //store


    <string-array name="language">
        <item>Choose Language</item>
        <item>العربية</item>
        <item>English</item>

    </string-array>

    <string-array name="distrbuter">
        <item>Choose Distributor </item>
        <item>distributor 1 </item>
        <item>distributor 2</item>
        <item>distributor 3 </item>

    </string-array>

    <string-array name="subdist">
        <item>Choose Sub Distributor </item>
        <item>Supplier 1 </item>
        <item>Supplier 2</item>
        <item>Supplier 3 </item>

    </string-array>

    <string-array name="salesway">
        <item>Choose View Way </item>
        <item>Choose Day</item>
        <item>Day sales </item>
        <item>Week Sales</item>
        <item>Month Sales </item>


    </string-array>

    <string-array name="categries">
        <item>Choose Category </item>
        <item>Foods </item>
        <item>Drinks </item>
        <item>Powders </item>


    </string-array>
    <string name="title_activity_reigster_user">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_registerphone">registerphone</string>


</resources>
