<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/pointscredit"
        android:icon="@drawable/pointss"
        android:title="@string/points"
        />
    <item android:id="@+id/readbar"
        android:icon="@drawable/barscanner"
        android:title="@string/barcodreader"
        />
    <item android:id="@+id/Salesscree"
        android:icon="@drawable/screensales"
        android:title="@string/salescreen"
        />
    <item android:id="@+id/sales"
        android:icon="@drawable/sales"
        android:title="@string/menusales"
        />

    <item android:id="@+id/about"
        android:icon="@drawable/about"
        android:title="@string/aboutus"
        />
    <item android:id="@+id/setting"
        android:icon="@drawable/settingsicon"
        android:title="@string/setting"
        />
    <item android:id="@+id/signout"
        android:icon="@drawable/logout"
        android:title="@string/logout"
        />

</menu>