<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:textSize="@dimen/large"
        android:textStyle="bold"
        android:text="@string/addproduct"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <EditText
        android:layout_width="wrap_content"
        android:id="@+id/addprice"
        android:layout_gravity="center"
        android:textColorHint="@color/darkgray"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:hint="@string/addprice"
        android:layout_margin="5dp"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/darkgray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/large"
            android:textStyle="bold"
            android:id="@+id/addproductt"
            android:gravity="center"
            android:text="@string/addit"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="1dp"
            android:background="@color/darkgray"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="0dp"
            android:id="@+id/cancelproduct"
            android:layout_weight="1"
            android:textSize="@dimen/large"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/cancelcamera"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/darkgray"/>

</LinearLayout>