<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="@dimen/large"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/removesales"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:textSize="@dimen/medium"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layoutDirection="ltr"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:id="@+id/confirmre"
            android:textSize="@dimen/medium"
            android:layout_height="40dp"
            android:layout_weight="1"/>
        <View
            android:layout_width="1dp"
            android:background="@color/black"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="0dp"
            android:textAllCaps="false"
            android:text="@string/cancelcamera"
            android:textColor="@color/black"
            android:id="@+id/cancelre"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/medium"
            android:layout_height="40dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>


</LinearLayout>