<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:text="@string/enterbar"
        android:textSize="@dimen/xlarge"
        android:textColor="@color/black"
        android:layout_margin="4dp"
        android:textStyle="bold"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="2dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.7"
            android:textStyle="bold"
            android:text="@string/epbarcode"
            android:textSize="@dimen/medium"

            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1.7"
            android:textColor="@color/black"
            android:inputType="number"
            android:id="@+id/barcodedittext"
            android:layout_height="wrap_content" />




    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layoutDirection="ltr"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:text="@string/cancelcamera"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:id="@+id/cancell"
            android:textSize="@dimen/medium"
            android:layout_height="50dp"
            android:layout_weight="1"/>
        <View
            android:layout_width="1dp"
            android:background="@color/gray"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="0dp"
            android:textAllCaps="false"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:id="@+id/okk"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/medium"
            android:layout_height="50dp"
            android:layout_weight="1"/>
    </LinearLayout>


</LinearLayout>