<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="?attr/colorPrimaryDark"
    android:orientation="horizontal"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:gravity="bottom">

    <ImageView
        android:layout_width="80dp"
        android:layout_marginStart="10dp"
        android:id="@+id/storeimgnav"
        android:src="@drawable/ic_shop"
        android:background="@drawable/square"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:padding="5dp"
        android:layout_marginEnd="3dp"
        android:layout_marginTop="20dp"
        android:layout_height="80dp" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_weight="2"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/medium"
            android:layout_marginTop="5dp"
            android:id="@+id/storenamnav"
            android:layout_alignParentTop="true"
            android:textStyle="bold"
            android:text="@string/storenam"
            android:fontFamily="serif"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/medium"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/welcomtxt"
                android:fontFamily="serif"
                android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/x_small"
            android:singleLine="true"
            android:gravity="center"
            android:id="@+id/retailernamnav"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:text="@string/namV"
            android:fontFamily="serif"
            android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:id="@+id/accountdatanav"
            android:textSize="@dimen/x_small"
            android:text="@string/accountdata"
            android:fontFamily="serif"
            android:layout_height="wrap_content" />
    </RelativeLayout>



</LinearLayout>